Still can’t get gitignore to act as I’d like

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-/.ipynb_checkpoints
+/.ipynb_checkpoints/
 /*.csv
 /*.html
 /*.pdf
 /*.tex
-/notebooks/.ipynb_checkpoints
-/notebooks/.ipynb_checkpoints/*
+/notebooks/.ipynb_checkpoints/
 /solutions/*.tex
 /examples/*.tex
 /images/*.xopp
